Fix navbar display on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
 p {
   margin: auto;
   width: 90%;
-  padding: 20px 30px;
+  padding: 20px 0px;
 }
 
 footer {
@@ -74,8 +74,7 @@ p > a {
 }
 
 section {
-  width: 80%;
+  width: 100%;
   margin: auto;
   max-width: 1000px;
-  padding: 20px;
 }
