--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -9,7 +9,7 @@
 .navbar-item {
     margin-right: 10px;
     text-decoration: none;
-    font-size: x-large;
+    font-size: medium;
 }
 
 .current-navbar {
